# iced-holochain

./: .gitignore  Cargo.toml  README  build_happ.sh  flake.nix
happ/workdir/: dna.yaml  happ.yaml
happ/zomes/coordinator/holomess/: Cargo.toml
happ/zomes/coordinator/holomess/src/: lib.rs
happ/zomes/coordinator/holomess/tests/: lib.rs
happ/zomes/coordinator/holomessage/: Cargo.toml
happ/zomes/coordinator/holomessage/src/: lib.rs
happ/zomes/coordinator/holomessage/tests/: lib.rs
happ/zomes/coordinator/profiles/: Cargo.toml
happ/zomes/integrity/holomess/: Cargo.toml
happ/zomes/integrity/holomess/src/: lib.rs
happ/zomes/integrity/holomessage/: Cargo.toml
happ/zomes/integrity/holomessage/src/: lib.rs
happ/zomes/integrity/profiles/: Cargo.toml
src/: happ.rs  lib.rs  main.rs
