[package]
edition = "2021"
name = "iced-holochain"
version = "0.1.0"

[workspace]
members = ["happ/zomes/integrity/holomess", "happ/zomes/integrity/profiles", "happ/zomes/coordinator/profiles"]
resolver = "2"

[workspace.dependencies]
getrandom = {version = "0.2", features = ["custom"]}
hc_zome_profiles_integrity = "0.2.0"
hdi = "=0.4.0-beta-dev.13"
# hdi = "=0.3.2"
hdk = "=0.3.0-beta-dev.17"

[lib]
crate-type = ["lib"]

[dependencies]
# holochain = "=0.2.2"
hc_zome_profiles_integrity = {workspace = true}
hdk = {workspace = true}
holochain = "=0.3.0-beta-dev.22"
# holochain_client = {path = "../../../holochain/holochain-client-rust"}
holochain_nonce = "0.3.0-beta-dev.20"
get-port = "4"
holochain_client = "0.5.0-dev.0"
# holochain_client = "=0.4"
iced = {version = "0.10", features = ["tokio"]}
lair_keystore_api = "0.3.0"
sodoken = "0.0.9"
tempfile = "3"
# utilities = {path = "../../../holochain/holochain-client-rust/utilities"}
