[package]
edition = "2021"
name = "iced-holochain"
version = "0.1.0"

[lib]
crate-type = ["lib"]

[workspace]
members = [
  "happ/zomes/integrity/profiles",
  "happ/zomes/integrity/holomess",
  "happ/zomes/coordinator/profiles",
  "happ/zomes/coordinator/holomess",
]
resolver = "2"

[workspace.dependencies]
getrandom = { version = "0.2", features = ["custom"] }
hc_zome_profiles_integrity = "0.2"
hdi = "0.3"
hdk = "0.2"
holochain = { version = "0.2", default-features = false, features = [
  "test_utils",
] }
holomess_integrity = { path = "happ/zomes/integrity/holomess" }
serde = ">=1.0,<=1.0.166"
tokio = "1.35"

[dependencies]
get-port = "4"
hc_zome_profiles_integrity = { workspace = true }
hdk = { workspace = true }
holochain = { workspace = true }
holochain_client = "0.4"
holochain_state = "0.2"
holochain_trace = "0.2"
holomess_integrity = { workspace = true }
iced = { version = "0.10", features = ["tokio"] }
lair_keystore_api = "0.3.0"
once_cell = "1.19"
serde = { workspace = true }
serde_yaml = "0.9"
sodoken = "0.0.9"
tempfile = "3"
tokio = { workspace = true }
